Revise README for Users & Accounts Application
Updated README to reflect the Users & Accounts application details, including project overview, features, technology stack, setup instructions, API endpoints, and future enhancements.